background styled, game details updated

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="keymaster.js"></script>
     <script src="bundle.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <title>SmashAstro</title>
+    <link rel="icon" href="./imgs/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <canvas id="game"></canvas>
+    <h1>S m a s h A s t r o</h1>
+    <div class="container">
+      <canvas id="game"></canvas>
+    </div>
   </body>
 </html>
