add instructions, new img

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <h1>S m a s h A s t r o</h1>
     <div class="container">
       <canvas id="game"></canvas>
+      <section id="instructions">
+        <h1>Instructions</h1>
+        <p>Shoot Stuff</p>
+        <button id="start">START</button>
+      </section>
     </div>
   </body>
 </html>
