--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <script src="keymaster.js"></script>
     <script src="bundle.js"></script>
@@ -10,13 +11,20 @@
     <link rel="icon" href="./imgs/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <h1 class="header">S m a s h A s t r o</h1>
+    <h1 class="header">
+      <a href="https://www.linkedin.com/in/neilgewirtz/" target="_blank"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i></a>
+        S m a s h A s t r o
+      <a href="https://github.com/NGewirtz" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+    </h1>
     <aside class="left-aside">
       <h3>Controls</h3>
       <p>Left/Right: Move</p>
       <p>Spacebar: Shoot</p>
       <p>P: Pause</p>
       <p>S: Toggle Sound</p>
+      <div class="by-div">
+        <a href="https://ngewirtz.github.io/" target="_blank"><h4>By: NEIL GEWIRTZ</h4></a>
+      </div>
     </aside>
     <aside class="right-aside">
       <h3>Points</h3>
