--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="header">
       <a href="https://www.linkedin.com/in/neilgewirtz/" target="_blank"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i></a>
         S m a s h A s t r o
-      <a href="https://github.com/NGewirtz" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+      <a href="https://github.com/NGewirtz/SmashAstro" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
     </h1>
     <aside class="left-aside">
       <h3>Controls</h3>
