--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>P: Pause</p>
       <p>S: Toggle Sound</p>
       <div class="by-div">
-        <a href="https://ngewirtz.github.io/" target="_blank"><h4>By: NEIL GEWIRTZ</h4></a>
+        <a href="http://neilgewirtz.com/" target="_blank"><h4>By: NEIL GEWIRTZ</h4></a>
       </div>
     </aside>
     <aside class="right-aside">
