update instructions and change hurricane audio

--- a/index.html
+++ b/index.html
@@ -38,20 +38,12 @@
       <main id="instructions">
         <h1>Instructions</h1>
         <section>
-          <img class="instruction-images" src="./imgs/ship3.png" />
-          <p>Control your ship to protect the ground from falling objects.</p>
-        </section>
-        <section>
           <img class="instruction-images" src="./imgs/meteor2.gif" />
-          <p>Shoot the meteors before they hit the ground or you will lose a life.</p>
+          <h5>Shoot the meteors before they hit the ground or you will lose a life!!!</h5>
         </section>
         <section>
           <img class="instruction-images" src="./imgs/Asteroid2.png" />
-          <p>Large asteroids split into two smaller asteroids when hit.</p>
-        </section>
-        <section>
-          <img class="instruction-images small" src="./imgs/Asteroid2.png" />
-          <p>If your ship is hit by any size asteroid you will lose a life. If an asteroid hits the ground you will lose points.</p>
+          <h5>If your ship is hit by any size asteroid you will lose a life. If an asteroid hits the ground you will lose points.</h5>
         </section>
         <p class="instructions-bottom-text">Score points by shooting objects before they hit the ground. As your score grows you will advance to later levels, the background will change, and enemies will move faster. Controls are on the left, and point values are on the right. Click the start button below to play! </p>
         <button id="start">START</button>
